    Thanks to Jérémy Bobbio <lunar@debian.org>. Closes: #764721
  * Perl modules:
    - Allow multiple whitespace in Dpkg::BuildProfiles::get_build_profiles()
      when parsing the DEB_BUILD_PROFILES environment variable.
      Thanks to Johannes Schauer <j.schauer@email.de>.
    - New Dpkg::Getopt private module.
    - Document public module Dpkg.
  * Set the DEB_TARGET_* dpkg-architecture variables from architecture.mk.
    Missed in dpkg 1.17.14.
  * Initialize DEB_TARGET_ARCH variable without requiring DEB_HOST_ARCH,
    which is not being set at all when querying for DEB_TARGET_ variables.
  * Normalize dpkg-architecture command-line parsing, so that «--option=value»
    «--option value», «-ovalue» and «-o value» will all be accepted.
  * Add long option names for all dpkg-architecture short options.
  * Add support for --host-arch, --host-type, --target-arch and --target-type
    long options in dpkg-buildpackage. These will get passed through to
    dpkg-architecture. This restores the ability to specify the target
    architecture when building cross-compilers. Regression introduced in
    dpkg 1.17.14. Reported by Helmut Grohne <helmut@subdivi.de>.
  * Do not modify the topic variable values in list functions in perl code.
  * List Dpkg::Exit and Dpkg::Interface::Storable as public modules in
    libdpkg-perl package description.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Vietnamese (Trần Ngọc Quân).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Mon, 06 Oct 2014 13:46:57 +0200

dpkg (1.17.16) unstable; urgency=low

  * Set the copyright holder in the po4a calls for man pages.
  * Switch remaining topic to named variable in Dpkg::Source::Patch:analyze(),
    otherwise the loop was expecting values in one variable but storing them
    in another. Regression introduced in dpkg 1.17.14. Closes: #764206
  * Set umask to 0 when creating symlinks in tar test case, to normalize