@@ -22,6 +22,7 @@ dpkg (1.17.17) UNRELEASED; urgency=low
       Thanks to Johannes Schauer <j.schauer@email.de>.
     - New Dpkg::Getopt private module.
     - Document public module Dpkg.
+    - Document public module Dpkg::Gettext.
   * Set the DEB_TARGET_* dpkg-architecture variables from architecture.mk.
     Missed in dpkg 1.17.14.
   * Initialize DEB_TARGET_ARCH variable without requiring DEB_HOST_ARCH,
